--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,9 @@
 <h1>New cocktail</h1>
 
 
-<%= simple_form_for [@cocktail, ] do |f| %>
+<%= simple_form_for [@cocktail] do |f| %>
   <%= f.input :name %>
   <%= f.submit "Add a cocktail", class: "btn btn-primary" %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
 <% end %>
