--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -10,5 +10,7 @@
   <% end %>
   <%= link_to "Back to the cocktails", cocktails_path %>
     <%= link_to "Add Dose", new_cocktail_dose_path(@cocktail) %>
+    <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+
 </p>
 
